src/test/fail/array_invalid_comparisons_fail.egern
print([1, 2, 3] < [1, 2, 4])
print([1, 2, 3] > [3, 2, 1])
print([1, 3, 5] <= [3, 2, 1])
print([3, 2, 1] >= [4, 3, 2])

print([1, 2, 3] == [[1, 2], [3, 4]])
print([4, 3, 2] == 2)
print([9, 8] != false)
